[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rwtools"
version = "0.0.1"
authors = [
    { name="Rose Wills", email="rosiepyw@gmail.com" }
]
description = "Python tools for Rose's workflow"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rosewills/rwtools"